crates/rayban/tests/compile_fail/no_role.rs
use rayban::Rayban;

#[derive(Rayban)]
struct Missing {
    value: u32,
}

fn main() {}
