crates/rayban/tests/compile_fail/no_role.stderr
error: missing a `rayban_root` or `rayban` attribute
 --> tests/compile_fail/no_role.rs:4:1
  |
4 | struct Missing {
  | ^^^^^^
